manifests/web/ingress-comame-xyz.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-comame-xyz
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: external
  tls:
    - hosts:
        - comame.xyz
        - vpnserver.comame.xyz
        - voms-timeline.comame.xyz
        - dotfiles.comame.xyz
        - dev-8080.comame.xyz
      secretName: comame-xyz
  rules:
    - host: comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comame-xyz
                port:
                  number: 80
    - host: vpnserver.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpnserver-status
                port:
                  number: 2000
    - host: voms-timeline.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voms-timeline
                port:
                  number: 80
    - host: dotfiles.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotfiles
                port:
                  number: 80
    - host: dev-8080.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-comame-xyz-norewrite
  namespace: web
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: external
  tls:
    - hosts:
        - discordbot.comame.xyz
        - comame.xyz
        - livestream.comame.xyz
        - music.comame.xyz
        - note.comame.xyz
        - echo.comame.xyz
      secretName: comame-xyz-norewrite
  rules:
    - host: discordbot.comame.xyz
      http:
        paths:
          - path: /high-school-fleet
            pathType: Prefix
            backend:
              service:
                name: discordbot-haifuri
                port:
                  number: 8080
          - path: /dicebot
            pathType: Prefix
            backend:
              service:
                name: discord-dicebot
                port:
                  number: 8080
    - host: comame.xyz
      http:
        paths:
          - path: /crazybuz
            pathType: Prefix
            backend:
              service:
                name: crazybuz
                port:
                  number: 80
          - path: /clock
            pathType: Prefix
            backend:
              service:
                name: clock
                port:
                  number: 80
    - host: livestream.comame.xyz
      http:
        paths:
          - path: /__idproxy
            pathType: Prefix
            backend:
              service:
                name: id-proxy
                port:
                  number: 8080
          - path: /hls/music-radio-20230711
            pathType: Prefix
            backend:
              service:
                name: id-proxy
                port:
                  number: 8080
          - path: /viewer/music-radio-20230711
            pathType: Prefix
            backend:
              service:
                name: id-proxy
                port:
                  number: 8080
          - path: /hls
            pathType: Prefix
            backend:
              service:
                name: livestream-hls
                port:
                  number: 8080
          - path: /viewer
            pathType: Prefix
            backend:
              service:
                name: livestream-viewer
                port:
                  number: 8080
    - host: music.comame.xyz
      http:
        paths:
          - path: /sw.js
            pathType: Prefix
            backend:
              service:
                name: itl-web
                port:
                  number: 8080
          - path: /manifest.json
            pathType: Prefix
            backend:
              service:
                name: itl-web
                port:
                  number: 8080
          - path: /icon.svg
            pathType: Prefix
            backend:
              service:
                name: itl-web
                port:
                  number: 8080
          - path: /icon.png
            pathType: Prefix
            backend:
              service:
                name: itl-web
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: id-proxy
                port:
                  number: 8080
    - host: note.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: note-comame-xyz
                port:
                  number: 8080
    - host: echo.comame.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: comame-xyz
  namespace: web
spec:
  type: ExternalName
  externalName: comame-xyz.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: voms-timeline
  namespace: web
spec:
  type: ExternalName
  externalName: voms-timeline.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: dotfiles
  namespace: web
spec:
  type: ExternalName
  externalName: dotfiles.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: vpnserver-status
  namespace: web
spec:
  type: ExternalName
  externalName: pi.comame.dev

---
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: web
spec:
  type: ExternalName
  externalName: s1.comame.dev

---
apiVersion: v1
kind: Service
metadata:
  name: discordbot-haifuri
  namespace: web
spec:
  type: ExternalName
  externalName: discordbot-haifuri.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: discord-dicebot
  namespace: web
spec:
  type: ExternalName
  externalName: discord-dicebot.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: crazybuz
  namespace: web
spec:
  type: ExternalName
  externalName: crazybuz.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: livestream-hls
  namespace: web
spec:
  type: ExternalName
  externalName: livestream-http.livestream.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: livestream-viewer
  namespace: web
spec:
  type: ExternalName
  externalName: livestream-viewer.livestream.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: itl-web
  namespace: web
spec:
  type: ExternalName
  externalName: itl-web.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: note-comame-xyz
  namespace: web
spec:
  type: ExternalName
  externalName: note-comame-xyz.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: clock
  namespace: web
spec:
  type: ExternalName
  externalName: clock.comame-xyz.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: web
spec:
  type: ExternalName
  externalName: echo.comame-xyz.svc.cluster.local
